--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "compression": "^1.5.2",
     "cors": "^2.7.1",
     "express": "^4.13.3",
+    "express-async-handler": "^1.1.4",
     "morgan": "^1.8.0",
     "pg": "^7.12.1",
     "resource-router-middleware": "^0.6.0",
